# DemeterAi-docs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REMEDIATION_PLAN.md  ARCHITECTURE_VIOLATIONS_DETAILED_TABLE.txt  ARCHITECTURE_VIOLATIONS_EXECUTIVE_SUMMARY.txt  ARCHITECTURE_VIOLATIONS_QUICK_REF.md  AUDIT_EXECUTIVE_SUMMARY.txt  AUDIT_EXECUTIVE_SUMMARY_ACTION_REQUIRED_2025-10-21.md  AUDIT_FIXES_SUMMARY.md  AUDIT_INDEX.md  AUDIT_REPORTS_INDEX.md  AUDIT_RESULTS_2025-10-21.txt  CLAUDE.md  CODE_QUALITY_AUDIT_2025-10-20.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_2025-10-20.md  CONTROLLERS_IMPLEMENTATION_REPORT.md  CONTROLLERS_IMPLEMENTATION_STATUS.md  COORDINATE_TRANSFORMATION_FIX.md  CRITICAL_FIXES_PHOTO_UPLOAD.md  DATABASE_QUICK_REFERENCE.md  DATABASE_SCHEMA_AUDIT.md  DATABASE_SCHEMA_AUDIT_REPORT.md  DATA_LOADING_SUCCESS.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.gpu  ENUM_ANALYSIS_SUMMARY.txt  ENUM_BY_TABLE_REFERENCE.md  ENUM_CONFLICT_DIAGNOSTIC_REPORT.md  ENUM_QUICK_REFERENCE.txt  FACTORY_IMPLEMENTATION_CHECKLIST.md  FACTORY_VALIDATION_REPORT.md  FINAL_VERIFICATION_S002-S010.md  FIXES_APPLIED_2025-10-22.md  FIXTURE_MIGRATION_SUMMARY.md  FIX_IMPLEMENTATION_SUMMARY.md  FLOWS_AUDIT_INDEX.md  (+88 more)
.claude/: INSTRUCTION_SYSTEM_README.md  README.md  settings.local.json
.claude/agents/: database-expert.md  git-commit-writer.md  python-expert.md  scrum-master.md  team-leader.md  testing-expert.md
.claude/commands/: complete-task.md  plan-epic.md  review-task.md  sprint-review.md  start-task.md
.claude/templates/: handoff-note.md  mini-plan-template.md  task-progress-update.md
.claude/workflows/: orchestration.md  python-expert-workflow.md  scrum-master-workflow.md  team-leader-workflow.md  testing-expert-workflow.md
.github/: CI_CD_SUMMARY.md  DEVELOPMENT.md  QUICK_REFERENCE.md
.github/workflows/: README.md  ci.yml  docker-build.yml  security.yml
alembic/: env.py
alembic/versions/: 0fc9cac096f2_create_product_categories_table.py  1a2b3c4d5e6f_create_product_families_table.py  1wgcfiexamud_create_storage_bins_table.py  2f68e3f132f5_create_warehouses_table.py  2wh7p3r9bm6t_create_storage_bin_types_table.py  3xy8k1m9n4pq_create_product_states_table.py  440n457t9cnp_create_s3_images_table.py  4ab9c2d8e5fg_create_product_sizes_table.py  5gh9j2n4k7lm_create_products_table.py  6f1b94ebef45_initial_setup_enable_postgis.py  6kp8m3q9n5rt_create_users_table.py  742a3bebd3a8_create_storage_areas_table.py  8807863f7d8c_add_location_relationships_table.py  9f8e7d6c5b4a_create_remaining_tables.py  a1b2c3d4e5f6_add_circular_fk_storage_location_photo_session.py  b2c3d4e5f6g7_add_webp_avif_content_types.py  b5820a339233_s3_bucket_consolidation_add_image_type_.py  c3d4e5f6g7h8_add_image_data_to_s3_images.py  cd8d2c2050ab_make_original_image_id_nullable_in_.py  sof6kow8eu3r_create_storage_locations_table.py
app/: __init__.py  celery_app.py  main.py
app/celery/: __init__.py  base_tasks.py
app/controllers/: __init__.py  admin_controller.py  analytics_controller.py  auth_controller.py  config_controller.py  location_controller.py  map_controller.py  photo_controller.py  product_controller.py  stock_controller.py
app/core/: AUTH_USAGE_GUIDE.md  __init__.py  auth.py  cache.py  config.py  exceptions.py  (+5 more)
backlog/: AUDIT_SPRINT_00_01_02.md  BACKLOG_COMPLETION_GUIDE.md  FINAL_AUDIT_REPORT_SPRINT_00_01_02.md  GLOSSARY.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  STATUS.md
claude_analysis/: ANALYSIS_MANIFEST.md  ARCHITECTURE_REMEDIATION_PLAN.md  ARCHITECTURE_VIOLATIONS_CRITICAL_2025-10-21.md  ARCHITECTURE_VIOLATIONS_QUICK_REF.md  AUDIT_EXECUTIVE_SUMMARY_ACTION_REQUIRED_2025-10-21.md  AUDIT_FINAL_CRITICAL_MASTER_REPORT_2025-10-21.md  AUDIT_INDEX.md  AUDIT_REPORTS_INDEX.md  AUDIT_REPORTS_INDEX_2025-10-21.md  AUDIT_SUMMARY_VISUAL.txt  BLOCKER_MATRIX_READINESS_2025-10-21.md  CODE_QUALITY_AUDIT_2025-10-20.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_2025-10-20.md  COMPREHENSIVE_AUDIT_REPORT_FINAL_2025-10-21.md  CONTROLLERS_IMPLEMENTATION_REPORT.md  CRITICAL_ISSUES.md  DATABASE_QUICK_REFERENCE.md  DATABASE_RECREATION_REPORT_2025-10-21.md  DATABASE_SCHEMA_AUDIT_REPORT.md  DEPLOYMENT_DOCS_INDEX.md  DEPLOYMENT_DOCUMENTATION_SUMMARY.md  DEPLOYMENT_QUICK_REFERENCE.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_OPTIMIZATION_SUMMARY.md  ENUM_ANALYSIS_COMPLETE.md  ENUM_BY_TABLE_REFERENCE.md  ENUM_CONFLICT_DIAGNOSTIC_REPORT.md  ENUM_DOCUMENTATION_INDEX.md  ENUM_FIX_QUICK_GUIDE.md  EXECUTIVE_DECISION_SUMMARY_2025-10-21.md  FACTORY_IMPLEMENTATION_CHECKLIST.md  FACTORY_VALIDATION_REPORT.md  FINAL_VERIFICATION_S002-S010.md  FLOWS_AUDIT_INDEX.md  FLOWS_DISCREPANCY_MATRIX.md  FLUJO_PRINCIPAL_V3_PHASE_COMPLETION.md  IMMEDIATE_ACTION_REQUIRED.md  IMMEDIATE_FIXES_CHECKLIST_2025-10-21.md  IMPLEMENTATION_PROGRESS_2025-10-22.md  (+103 more)
context/: past_chats_summary.md
database/: database.mmd
docs/: DOCKER.md  F011_COMPLETION_REPORT.md  F012_COMPLETION_REPORT.md  MYPY_USAGE.md  alembic_usage.md  controller_log.md  installation.md
engineering_plan/: 01_project_overview.md  02_technology_stack.md  03_architecture_overview.md  README.md  _ARCHIVED_engineering_doc_v1.md
flows/: 01_complete_pipeline_v4.md  01_complete_pipeline_v4.mmd  02_api_entry_detailed.mmd  03_s3_upload_circuit_breaker_detailed.md  04_ml_parent_segmentation_detailed.mmd  05_sahi_detection_child_detailed.mmd  06_boxes_plugs_detection_detailed.md  06_boxes_plugs_detection_detailed.mmd  07_callback_aggregation_detailed.md  07_callback_aggregation_detailed.mmd  08_frontend_polling_detailed.mmd  FLUJO PRINCIPAL V3-2025-10-07-201442.mmd  flujo_ventas.mmd
guides/: flowchart_mermaid_docs.md  mermaid_cli_usage.md
request_tests/: analytics_controller.http  auth_controller.http  config_controller.http  location_controller.http  product_controller.http  stock_controller.http
researchs/: compass_artifact_wf-1c500a2d-01b3-468c-974b-bec83c6e4439_text_markdown.md  stock_management_systems.md
tests/: DB002_TEST_SUMMARY.md  PHOTO_UPLOAD_TESTS_README.md  README.md  __init__.py  conftest.py
(+728 files in other folders)
