[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demeterai-backend"
version = "2.0.0"
description = "DemeterAI v2.0 - Automated plant counting backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.118.2",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.43",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "celery==5.4.0",
    "redis==5.2.0",
    "ultralytics==8.3.0",
    "opencv-python-headless==4.10.0.84",
    "pillow==11.0.0",
    "torch==2.4.0",
    "sahi==0.11.18",
    "boto3==1.35.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pybreaker==1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",
    "ruff==0.7.0",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "docs*", "flows*", "guides*", "context*", "backlog*", "database*", "researchs*", "geolocalization*", "engineering_plan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=html --cov-report=term"
